another fix to breadcrumb spacing

--- a/scss/bootstrap-overrides/_breadcrumb.scss
+++ b/scss/bootstrap-overrides/_breadcrumb.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-wrap: wrap;
   padding: 0;
-  margin-bottom: $breadcrumb-margin-bottom;
+  margin-bottom: 0;
   @include font-size($breadcrumb-font-size);
   list-style: none;
   background-color: $breadcrumb-bg;
